# GenericScanner

./: .gitignore  README.md  config.yaml  pyproject.toml
.claude/: PROJECT.md
.claude/commands/: ask.md  commit.md  readproject.md
.claude/skills/: api-governor.md  goal-tracker.md  workspace-governor.md
common/constants/: __init__.py
common/models/: __init__.py  base.py  node.py  stat.py  target.py  task.py  vuln_case.py
common/observability/: __init__.py  health.py  logging.py  metrics.py  tracing.py
common/utils/: __init__.py  config.py  database.py
docs/: AI辅助开发大型项目管理框架.md  CURRENT_GOAL.md  ROADMAP.md
docs/api/: API.md
docs/git/: history.md
docs/git/logs/: .gitkeep
scanner/: coroutine_pool.py
scanner/core_engine/: __init__.py
scanner/core_engine/auth_manager/: __init__.py
scanner/core_engine/fingerprint/: __init__.py
scanner/core_engine/vuln_detector/: __init__.py
scanner/node_manager/: __init__.py
scheduler/: main.py
scheduler/api_gateway/: __init__.py  assets.py  nodes.py  plugins.py  schemas.py  stats.py  tasks.py
scheduler/dispatcher/: __init__.py
scheduler/task_manager/: __init__.py
tests/: conftest.py  test_api.py  test_models.py  test_observability.py  test_scanner.py  test_task_manager.py
